--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,8 @@
     "@nuxtjs/auth-next": "^5.0.0-1643791578.532b3d6",
     "@nuxtjs/axios": "^5.13.6",
     "@types/js-cookie": "^3.0.1",
+    "axios": "^0.25.0",
+    "body-parser": "^1.19.1",
     "core-js": "^3.19.3",
     "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8",
