--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,4 +1,6 @@
-Django==4.0.1
+dj-rest-auth==2.2.3
+Django==4.0.2
+django-allauth==0.48.0
 django-cors-headers==3.11.0
 django-storages[google]==1.12.3
 django-environ==0.8.1
